# mysegway_mujoco

./: README.md  model.py  requirements.txt  rt-plotter.py  segway.xml  segway_real.xml  simulate.py  simulator.py
controllers/: lqr_controller_with_standup  lqr_controller_with_standup.cpp  lqr_controller_with_standup.py
controllers/mpc/: CMakeLists.txt  mpc.cpp
